// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expect vitejs > test auto 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test auto with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customAttributes 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customAttributes with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customPosition 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>

    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />

    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customPosition with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>

    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/base/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />

    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test entryMatch 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test entryMatch with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test injectBottom 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test injectBottom with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test modulepreload 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="modulepreload"
      href="/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test modulepreload with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="modulepreload"
      href="/base/assets/lazy-BMgJfzmm.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noMatch 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noMatch with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noType 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link rel="preload" href="/assets/Roboto-Italic-C4aLNNPR.woff2" as="font" />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      as="font"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noType with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      as="font"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test wrongAttributes 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-Dbf-6TCm.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BkR2O4Mb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test wrongAttributes with basePath 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-C0NrOB6i.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-BFryvKQb.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;
